# ReIN

./: LICENSE  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
docs/: conversation-log.md
rein/: __init__.py  __main__.py  main.py
rein/client/: cli.py
rein/core/: __init__.py  config.py  conversation.py  harness.py
rein/hooks/: __init__.py  engine.py  types.py
rein/llm/: __init__.py  anthropic_llm.py  local_llm.py  provider.py
rein/permissions/: __init__.py  manager.py
rein/plugins/: __init__.py  loader.py
rein/server/: app.py
rein/tools/: __init__.py  bash_tool.py  file_tools.py  registry.py  search_tools.py
scripts/: install_context_menu.py  install_context_menu.reg  uninstall_context_menu.reg
tests/: test_core.py  test_hooks.py  test_permissions.py  test_plugins.py  test_tools.py
vscode-extension/: package.json
vscode-extension/src/: chatView.ts  extension.ts  server.ts
